// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthScreen renders correctly for anonymous user 1`] = `
<div
  className="overlay auth-screen"
>
  <nav
    className="navbar navbar-expand navbar-light bg-light"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Estimate It!
    </a>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://github.com/tatomyr/estimate-it"
          onClick={[Function]}
        >
          GitHub
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="panel"
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="username"
      >
        Public Name
      </label>
      <div
        className="input-group"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            <span
              aria-hidden={true}
              className="fa fa-user"
            />
          </span>
        </div>
        <input
          autoFocus={true}
          className="form-control"
          id="username"
          name="username"
          required={true}
          type="text"
        />
      </div>
      <label
        htmlFor="credentials"
      >
        Access Key
      </label>
      <div
        className="input-group"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            <span
              aria-hidden={true}
              className="fa fa-key"
            />
          </span>
        </div>
        <input
          className="form-control"
          id="credentials"
          name="credentials"
          required={true}
          type="password"
        />
      </div>
      <button
        className="btn btn-outline-primary"
        onClick={[Function]}
        type={undefined}
      >
        Sign In
      </button>
    </form>
    Or
    <br />
    <button
      className="btn btn-outline-primary"
      onClick={[Function]}
      type="button"
    >
      Guest Session
    </button>
  </div>
</div>
`;

exports[`AuthScreen renders correctly for authorized user 1`] = `
<div
  className="overlay auth-screen"
>
  <nav
    className="navbar navbar-expand navbar-light bg-light"
  >
    <a
      className="navbar-brand"
      href="/"
    >
      Estimate It!
    </a>
    <ul
      className="ml-auto navbar-nav"
    >
      <li
        className="nav-item"
      >
        <a
          className="nav-link"
          href="https://github.com/tatomyr/estimate-it"
          onClick={[Function]}
        >
          GitHub
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="panel"
  >
    <div>
      Welcome, 
      Test User
      !
    </div>
    <button
      className="btn btn-outline-primary"
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
    <button
      className="btn btn-outline-danger"
      onClick={[Function]}
      type="button"
    >
      Log Out
    </button>
  </div>
</div>
`;
